revisi fix fix fix banget
