# app/Http/Controllers/Api/MenuController.php
@@ -17,7 +17,6 @@ class MenuController extends Controller
      * tags={"Menu"},
      * summary="Ambil Semua Data Menu",
      * description="Endpoint ini membutuhkan Token JWT",
-     * security={{"bearerAuth":{}}}, 
      * @OA\Response(
      * response=200,
      * description="Sukses ambil data",
@@ -73,6 +72,57 @@ class MenuController extends Controller
         ]);
     }
 
+    /**
+     * @OA\Post(
+     * path="/api/menus",
+     * tags={"Menu"},
+     * summary="Tambah Menu Baru",
+     * description="Menambahkan data menu",
+     * security={{"bearerAuth":{}}},
+     * @OA\RequestBody(
+     * required=true,
+     * @OA\MediaType(
+     * mediaType="multipart/form-data",
+     * @OA\Schema(
+     * required={"name", "price", "category_id"},
+     * @OA\Property(property="name", type="string", example=""),
+     * @OA\Property(property="description", type="string", example=""),
+     * @OA\Property(property="price", type="number", format="float", example=25000),
+     * @OA\Property(property="category_id", type="integer", example=1, description=""),
+     * @OA\Property(property="image", type="string", format="binary", description="max 2MB")
+     * )
+     * )
+     * ),
+     * @OA\Response(
+     * response=201,
+     * description="Created",
+     * @OA\JsonContent(
+     * @OA\Property(property="status", type="string", example="Sukses"),
+     * @OA\Property(property="pesan", type="string", example="Menu berhasil Ditambahkan"),
+     * @OA\Property(property="data", type="object")
+     * )
+     * ),
+     * @OA\Response(
+     * response=400,
+     * description="Bad Request (Validasi Gagal)",
+     * @OA\JsonContent(
+     * @OA\Property(
+     * property="name",
+     * type="array",
+     * @OA\Items(type="string", example="The name field is required.")
+     * )
+     * )
+     * ),
+     * @OA\Response(
+     * response=403,
+     * description="Forbidden (Bukan Admin)",
+     * @OA\JsonContent(
+     * @OA\Property(property="pesan", type="string", example="Dilarang, hanya admin yang dapat mengakses halaman ini")
+     * )
+     * )
+     * )
+     */
+
     public function store(Request $request){
         $user = auth('api')->user();
         if($user->role !== 'global_admin' && $user->role !== 'admin'){
@@ -111,6 +161,61 @@ class MenuController extends Controller
             'data' => $menu
         ], 201);
     }
+
+    /**
+     * @OA\Post(
+     * path="/api/menus/{id}",
+     * tags={"Menu"},
+     * summary="Update Menu",
+     * description="Mengupdate data menu. Gunakan method POST dengan _method=PUT untuk support upload file.",
+     * security={{"bearerAuth":{}}},
+     * @OA\Parameter(
+     * name="id",
+     * in="path",
+     * description="ID Menu",
+     * required=true,
+     * @OA\Schema(type="integer")
+     * ),
+     * @OA\RequestBody(
+     * required=true,
+     * @OA\MediaType(
+     * mediaType="multipart/form-data",
+     * @OA\Schema(
+     * required={"name", "price", "category_id", "_method"},
+     * @OA\Property(property="_method", type="string", example="PUT", description="Wajib diisi PUT"),
+     * @OA\Property(property="name", type="string", example=""),
+     * @OA\Property(property="description", type="string", example=""),
+     * @OA\Property(property="price", type="number", format="float", example=25000),
+     * @OA\Property(property="category_id", type="integer", example=1),
+     * @OA\Property(property="image", type="string", format="binary", description="Upload gambar baru jika ingin ganti")
+     * )
+     * )
+     * ),
+     * @OA\Response(
+     * response=200,
+     * description="Success",
+     * @OA\JsonContent(
+     * @OA\Property(property="status", type="string", example="sukses"),
+     * @OA\Property(property="pesan", type="string", example="Menu berhasil di update"),
+     * @OA\Property(property="data", type="object")
+     * )
+     * ),
+     * @OA\Response(
+     * response=404,
+     * description="Not Found",
+     * @OA\JsonContent(
+     * @OA\Property(property="pesan", type="string", example="Tidak ada Menu")
+     * )
+     * ),
+     * @OA\Response(
+     * response=403,
+     * description="Forbidden",
+     * @OA\JsonContent(
+     * @OA\Property(property="pesan", type="string", example="Dilarang, hanya admin yang dapat mengakses halaman ini")
+     * )
+     * )
+     * )
+     */
 
     public function update(Request $request, $id)
     {
@@ -152,6 +257,42 @@ class MenuController extends Controller
             'status'    => 'sukses',
             'pesan'     => 'Menu berhasil di update',
             'data'      => $menu,
+        ]);
+    }
+
+    /**
+    * @OA\Delete(
+    * path="/api/menus/{id}",
+    * tags={"Menu"},
+    * summary="Hapus Menu",
+    * security={{"bearerAuth":{}}},
+    * @OA\Parameter(
+    * name="id",
+    * in="path",
+    * required=true,
+    * @OA\Schema(type="integer")
+    * ),
+    * @OA\Response(response=200, description="Berhasil Dihapus"),
+    * @OA\Response(response=404, description="Tidak ditemukan"),
+    * @OA\Response(response=403, description="Forbidden")
+    * )
+    */
+
+    public function destroy($id)
+    {
+        $user = auth('api')->user();
+        if(!$user || $user->role !== 'global_admin' && $user->role !== 'admin'){
+            return response()->json(['Pesan' => 'Dilarang'], 403);
+        }
+
+        $menu = Menu::find($id);
+            if(!$menu) return response()->json(['pesan' => 'Tidak ada Menu'], 404);
+
+        $menu->delete();
+
+        return response()->json([
+            'status' => 'Sukses',
+            'pesan' => 'Menu berhasil dihapus',
         ]);
     }
 
